--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,42 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
+  height: 100vh;
+  width: 100vw;
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
+}
+
+.sidebar-nav {
+  margin-top: 20px;
+  padding: 0;
+  list-style: none;
+}
+
+.container {
+  height: 95vh;
+  width: 95vw;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 10fr 1fr;
+  gap: 10px;
+}
+.sidebar-container {
+  grid-area: 1 / 1 / 2 / 2;
+  padding: 10px;
+  font-size: 1.5vw;
+}
+.main-content-container {
+  grid-area: 1 / 2 / 2 / 3;
+  padding-left: 10px;
+}
+.footer {
+  grid-area: 2 / 1 / 3 / 3;
+  text-align: center;
+  font-size: 10px;
+}
+li {
+  margin-bottom: 10px;
 }
