--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,15 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #[em Boat Inventory], a very basic Express website developed as a part of 
+    a(href="https://www.theodinproject.com/lessons/nodejs-inventory-application") The Odin Project NodeJS curriculum.
+
+  h1 Dynamic content
+  p The library has the following record counts:
+
+  ul
+    li #[strong Boats:] !{numBoats}
+    li #[strong Designers:] !{numDesigners}
+    li #[strong Manufacturers:] !{numManufacturers}
+    li #[strong Types:] !{numTypes}
+    
