--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,34 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    div(class='container')
+      div(class='sidebar-container')
+        div(class='col-sm-2')
+          block sidebar
+            ul(class='sidebar-nav')
+              li
+                a(href='/catalog') Home
+              li
+                a(href='/catalog/boats') All boats
+              li
+                a(href='/catalog/designers') All designers
+              li
+                a(href='/catalog/manufucturers') All manufacturers
+              li
+                a(href='/catalog/tyoes') All types
+              li
+                hr
+              li
+                a(href='/catalog/boat/create') Create new boat
+              li
+                a(href='/catalog/designer/create') Create new designer
+              li
+                a(href='/catalog/manufacturer/create') Create new manufacturer
+              li
+                a(href='/catalog/type/create') Create new type
+
+      div(class='main-content-container')
+        block content
+      div(class="footer")
+        p The Odin Project 2023 - Coded by 
+          a(href="https://github.com/oguzhan-ulutas") oguzhan-ulutas
