Add manufacturer list view

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,7 @@ html
               li
                 a(href='/catalog/designers') All designers
               li
-                a(href='/catalog/manufucturers') All manufacturers
+                a(href='/catalog/manufacturers') All manufacturers
               li
                 a(href='/catalog/tyoes') All types
               li
