add types list view page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,7 @@ html
               li
                 a(href='/catalog/manufacturers') All manufacturers
               li
-                a(href='/catalog/tyoes') All types
+                a(href='/catalog/types') All types
               li
                 hr
               li
