--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,11 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #[em Boat Inventory], a very basic Express website developed as a part of 
-    a(href="https://www.theodinproject.com/lessons/nodejs-inventory-application") The Odin Project NodeJS curriculum.
+  p Welcome to 
+    a(href="https://www.theodinproject.com/lessons/nodejs-inventory-application") #[em Boat Inventory] 
+    |, a very basic Express website developed as a part of 
+    a(href="https://www.theodinproject.com") The Odin Project 
+    a(href="https://www.theodinproject.com/paths/full-stack-javascript/courses/nodejs") NodeJS curriculum.
 
   h1 Dynamic content
   p The library has the following record counts:
