--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html
   body
     div(class='container')
       div(class='sidebar-container')
-        div(class='col-sm-2')
+        div
           block sidebar
             ul(class='sidebar-nav')
               li
