--- a/views/manufacturer_detail.pug
+++ b/views/manufacturer_detail.pug
@@ -2,17 +2,17 @@ extends layout
 
 block content
 
-  h1 Type: #{type.name}
+  h1 Manufacturer: #{manufacturer.name}
 
   div
 
     h4 Boats
 
     dl(class="item-detail-page")
-      each boat in boatsInType
+      each boat in boatsManufactured
         dt
           a(href=boat.url) #{boat.model} 
-          | (Manufacturer: #{boat.manufacturer[0].name})
+          | (Type: #{boat.type[0].name})
 
       else
         p This genre has no boats.
