Add boat detail view

--- a/views/manufacturer_detail.pug
+++ b/views/manufacturer_detail.pug
@@ -17,4 +17,4 @@ block content
           | (Type: #{boat.type[0].name})
 
       else
-        p This genre has no boats.
+        p This manufacturer has no boats.
