--- a/views/type_detail.pug
+++ b/views/type_detail.pug
@@ -17,4 +17,4 @@ block content
           | (Manufacturer: #{boat.manufacturer[0].name})
 
       else
-        p This genre has no boats.
+        p This type has no boats.
