Add manufacturer form view

--- a/views/type_form.pug
+++ b/views/type_form.pug
@@ -6,7 +6,7 @@ block content
   form(method='POST' action='')
     div.form-group
       label(for='name') Type:
-      input#name.form-control(type='text', placeholder='Sailboat, Catamaran etc.' name='name' value=(undefined===genre ? '' : genre.name))
+      input#name.form-control(type='text', placeholder='Sailboat, Catamaran etc.' name='name' value=(undefined===type ? '' : type.name))
     button.btn.btn-primary(type='submit') Submit
 
   if errors
