--- a/views/manufacturer_form.pug
+++ b/views/manufacturer_form.pug
@@ -5,7 +5,7 @@ block content
 
   form(method='POST' action='')
     div.form-group
-      label(for='name') Type:
+      label(for='name') Name:
       input#name.form-control(type='text', placeholder='Swan, Halberg-Rassy etc.' name='name' value=(undefined===manufacturer ? '' : manufacturer.name))
     div.form-group
       label(for='country') Country:
