Add boat delete functionality

--- a/views/boat_detail.pug
+++ b/views/boat_detail.pug
@@ -22,3 +22,7 @@ block content
     p #[Strong Beam: ] #{boat.beam} 
 
     p #[Strong Ballast: ] #{boat.ballast} 
+
+    hr
+    p
+        a(href=boat.url+'/delete') Delete boat
