Add designer delete functionality

--- a/views/designer_detail.pug
+++ b/views/designer_detail.pug
@@ -18,3 +18,7 @@ block content
 
       else
         p This designer has no boats.
+
+  hr
+  p
+    a(href=designer.url+'/delete') Delete designer
