--- a/views/manufacturer_detail.pug
+++ b/views/manufacturer_detail.pug
@@ -18,3 +18,7 @@ block content
 
       else
         p This manufacturer has no boats.
+
+  hr
+  p
+    a(href=manufacturer.url+'/delete') Delete manufacturer
