Add type delete

--- a/views/manufacturer_delete.pug
+++ b/views/manufacturer_delete.pug
@@ -21,7 +21,7 @@ block content
 
   else
     hr
-    h3 Do you really want to delete this Designer?
+    h3 Do you really want to delete this manufacturer?
 
     form(method='POST' action='')
       div.form-group
