--- a/views/boat_detail.pug
+++ b/views/boat_detail.pug
@@ -26,3 +26,5 @@ block content
     hr
     p
         a(href=boat.url+'/delete') Delete boat
+    p
+        a(href=boat.url+'/update') Update Boat
