Add update designer functionality

--- a/views/boat_detail.pug
+++ b/views/boat_detail.pug
@@ -27,4 +27,4 @@ block content
     p
         a(href=boat.url+'/delete') Delete boat
     p
-        a(href=boat.url+'/update') Update Boat
+        a(href=boat.url+'/update') Update boat
