--- a/views/designer_detail.pug
+++ b/views/designer_detail.pug
@@ -22,3 +22,5 @@ block content
   hr
   p
     a(href=designer.url+'/delete') Delete designer
+  p
+    a(href=designer.url+'/update') Update designer
