Add manufacturer update funtionality

--- a/views/manufacturer_detail.pug
+++ b/views/manufacturer_detail.pug
@@ -22,3 +22,5 @@ block content
   hr
   p
     a(href=manufacturer.url+'/delete') Delete manufacturer
+  p
+    a(href=manufacturer.url+'/update') Update manufacturer
