--- a/views/manufacturer_list.pug
+++ b/views/manufacturer_list.pug
@@ -6,7 +6,7 @@ block content
   ul
     each manufacturer in allManufacturers
       li
-        a(href=manufacturer.url) #{`${manufacturer.name} (${manufacturer.city}, ${manufacturer.country})}`}
+        a(href=manufacturer.url) #{`${manufacturer.name} (${manufacturer.city}, ${manufacturer.country})`}
 
     else
       li There are no manufacturer.
